--- a/css/index.css
+++ b/css/index.css
@@ -102,13 +102,14 @@
   padding: 30px 0;
   text-align: center;
 }
-.menu--open {
-  display: block;
-}
 html,
 body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto';
-  background-color: #fffef7;
+  background-color: red;
+}
+
+.menu--open {
+  display: block;
 }
